Fixed overlapping text on mobile in about me

--- a/css/styles.css
+++ b/css/styles.css
@@ -92,4 +92,5 @@ h3 {
 }
 .date {
   text-align: end;
+  word-wrap: break-word;
 }
